# robotics_lab_manual_2021_2022

./: .gitignore  README.md
experiment_01/: README.md
experiment_02/: README.md
experiment_02/pubsub/: CMakeLists.txt  package.xml
experiment_02/pubsub/launch/: pubsub.launch
experiment_02/pubsub/scripts/: publisher.py  subscriber.py
experiment_02/srvclient/: CMakeLists.txt  package.xml
experiment_02/srvclient/launch/: srvclient.launch
experiment_02/srvclient/scripts/: client.py  service.py
experiment_03/: CMakeLists.txt  README.md  package.xml
experiment_03/config/: config.rviz
experiment_03/launch/: manipulator.launch  mobile_robot_urdf.launch  mobile_robot_xacro.launch
experiment_03/scripts/: moment_of_inertia_calculator.py
experiment_03/urdf/: arm_urdf.urdf  bot_urdf.urdf  bot_xacro.xacro
experiment_04/: CMakeLists.txt  README.md  package.xml
experiment_04/experiment_04/: CMakeLists.txt  package.xml
experiment_04/experiment_04/launch/: control_with_topic.launch
experiment_04/experiment_04/scripts/: controller.py  controller_with_topic.py
experiment_04/experiment_04_msg/: CMakeLists.txt  package.xml
experiment_04/launch/: control.launch
experiment_04/scripts/: controller.py
experiment_05/: README.md
experiment_05/experiment_05/: CMakeLists.txt  package.xml
experiment_05/experiment_05/config/: config.rviz
experiment_05/experiment_05/launch/: camera_control.launch  control.launch  mobile_robot_xacro.launch
experiment_05/experiment_05/scripts/: camera_to_ball_control.py  controller.py  controller_for_ball.py
experiment_05/experiment_05/urdf/: bot_urdf.urdf  bot_xacro.xacro
experiment_05/experiment_05/world/: simple_ball.world
experiment_06/: README.md
experiment_06/rosserial/: rosserial.ino
experiment_07/: README.md
experiment_08/: README.md
experiment_08/ROS-Quadcopter-Simulation/src/: control.py
experiment_08/fly_bot/: .gitignore
experiment_08/fly_bot/launch/: Kwad_gazebo.launch
experiment_08/fly_bot/scripts/: control.py  pub.py
experiment_08/fly_bot/src/: control.py  pid.py
experiment_08/fly_bot/urdf/: Kwad.gazebo  Kwad.xacro  material.xacro
experiment_09/: README.md  toinstall.txt
experiment_09/ur5/src/Universal_Robots_ROS_Driver/ur_robot_driver/launch/: ur5e_bringup.launch  ur_common.launch
experiment_09/ur5/src/universal_robot/ur5_e_moveit_config/config/: controllers.yaml
experiment_09/ur5/src/universal_robot/ur5_e_moveit_config/launch/: demo.launch  move_group.launch
experiment_09/ur5/src/universal_robot/ur_description/cfg/: robot_config.yaml
experiment_09/ur5/src/universal_robot/ur_e_description/launch/: ur5e_upload.launch
experiment_10/: README.md
