<?xml version="1.0"?>
<package format="2">
  <name>experiment_03</name>
  <version>0.0.0</version>
  <description>The third experiment of the lab manual</description>

  <maintainer email="user@todo.todo">Shashank Moghe</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>xacro</depend>
</package>
