<package format='2'>

	<name>pubsub</name>
	<version>1.0.0</version>
	<description>
		Package that demonstrates publisher and subscriber
	</description>
	<maintainer email="praneeth.pep@gmail.com">kvk praneeth</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>rospy</depend>

</package>
